--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "Production ready API implementation using Node.js.",
   "main": "index.js",
   "scripts": {
-    "test": "node test.js",
-    "start": "node index.js",
+    "build": "npx tsc",
+    "dev": "nodemon src/index.ts",
+    "start": "node build/index.js",
     "prepare": "husky"
   },
   "author": "Ahmed A.",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^22.5.5",
     "husky": "^9.1.6",
-    "lint-staged": "^15.2.10"
+    "lint-staged": "^15.2.10",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   }
 }
