--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "build": "npx tsc",
     "dev": "nodemon src/server.ts",
     "start": "node build/server.js",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "format:check": "prettier . --check",
+    "format:fix": "prettier . --fix",
     "prepare": "husky"
   },
   "author": "Ahmed A.",
   "license": "ISC",
   "lint-staged": {
     "*.ts": [
-      "npm run lint:fix"
+      "npm run lint:fix",
+      "npm run format:fix"
     ]
   },
   "devDependencies": {
@@ -25,6 +28,7 @@
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.5.5",
     "eslint": "^9.11.0",
+    "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "nodemon": "^3.1.7",
