--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/server.ts",
   "scripts": {
     "build": "npx tsc",
-    "dev": "nodemon src/server.ts",
-    "start": "node build/server.js",
+    "dev": "cross-env NODE_ENV=development nodemon src/server.ts",
+    "start": "cross-env NODE_ENV=production node build/server.js",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "format:check": "prettier . --check",
@@ -35,5 +35,9 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.6.0"
+  },
+  "dependencies": {
+    "cross-env": "^7.0.3",
+    "dotenv-flow": "^4.1.0"
   }
 }
