--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.5",
+    "@types/source-map-support": "^0.5.10",
     "eslint": "^9.11.0",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.6",
@@ -40,6 +41,8 @@
   "dependencies": {
     "cross-env": "^7.0.3",
     "dotenv-flow": "^4.1.0",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "source-map-support": "^0.5.21",
+    "winston": "^3.14.2"
   }
 }
