--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express": "^4.21.0",
     "mongoose": "^8.6.3",
     "source-map-support": "^0.5.21",
-    "winston": "^3.14.2"
+    "winston": "^3.14.2",
+    "winston-mongodb": "^5.1.1"
   }
 }
