--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cross-env": "^7.0.3",
     "dotenv-flow": "^4.1.0",
     "express": "^4.21.0",
+    "helmet": "^7.1.0",
     "mongoose": "^8.6.3",
     "source-map-support": "^0.5.21",
     "ts-migrate-mongoose": "^3.8.4",
