--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.11.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.3",
     "@types/source-map-support": "^0.5.10",
     "eslint": "^9.11.1",
@@ -42,12 +44,16 @@
     "typescript-eslint": "^8.7.0"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "colorette": "^2.0.20",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv-flow": "^4.1.0",
     "express": "^4.21.0",
     "helmet": "^7.1.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.11.9",
     "mongoose": "^8.6.4",
     "rate-limiter-flexible": "^5.0.3",
     "source-map-support": "^0.5.21",
