--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.3",
     "@types/source-map-support": "^0.5.10",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.6",
@@ -47,6 +48,7 @@
     "bcrypt": "^5.1.1",
     "colorette": "^2.0.20",
     "cors": "^2.8.5",
+    "countries-and-timezones": "^3.6.0",
     "cross-env": "^7.0.3",
     "dotenv-flow": "^4.1.0",
     "express": "^4.21.0",
@@ -56,8 +58,10 @@
     "libphonenumber-js": "^1.11.9",
     "mongoose": "^8.6.4",
     "rate-limiter-flexible": "^5.0.3",
+    "resend": "^4.0.0",
     "source-map-support": "^0.5.21",
     "ts-migrate-mongoose": "^3.8.4",
+    "uuid": "^10.0.0",
     "winston": "^3.14.2",
     "winston-mongodb": "^6.0.0"
   }
