feat: Update .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,26 @@
 # Server
-ENV=dev
+ENV=development
 PORT=3000
 SERVER_URL=http://localhost:3000
 
 # Database
 DATABASE_URL=""
+
+# Frontend
+FRONTEND_URL=http://localhost:3000
+
+# Email
+EMAIL_SERVICE_API_KEY=""
+
+# Migration
+MIGRATE_MONGO_URI=""
+MIGRATE_AUTOSYNC=""
+
+# Client
+CLIENT_URL=""
+
+# Access token
+ACCESS_TOKEN_SECRET=""
+
+# Refresh token
+REFRESH_TOKEN_SECRET=""
