--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,19 @@
-# Server
+# app
 ENV=development
-PORT=3000
-SERVER_URL=http://localhost:3000
-
-# Database
-DATABASE_URL=""
-
-# Frontend
+APP_PORT=3000
+APP_HOSTNAME=localhost
 FRONTEND_URL=http://localhost:3000
 
-# Email
+# db
+DATABASE_URL=""
+
+# mail
 EMAIL_SERVICE_API_KEY=""
 
-# Migration
+# token
+ACCESS_TOKEN_SECRET="access-token-secret"
+REFRESH_TOKEN_SECRET="refresh-token-secret"
+
+# migration
 MIGRATE_MONGO_URI=""
-MIGRATE_AUTOSYNC=""
-
-# Client
-CLIENT_URL=""
-
-# Access token
-ACCESS_TOKEN_SECRET=""
-
-# Refresh token
-REFRESH_TOKEN_SECRET=""
+MIGRATE_AUTOSYNC="true"
