fix: License in package.json

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "migrate:prod": "cross-env MIGRATE_MODE=production node script/migration.js"
   },
   "author": "Ahmed A.",
-  "license": "ISC",
+  "license": "MIT",
   "lint-staged": {
     "*.ts": [
       "npm run lint:fix",
