feat: Update .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
 # app
-ENV=development
-APP_PORT=3000
-APP_HOSTNAME=localhost
-FRONTEND_URL=http://localhost:3000
+ENV=
+APP_PORT=
+APP_HOSTNAME=
+FRONTEND_URL=
 
 # db
-DATABASE_URL=""
+DATABASE_URL=
 
 # mail
-EMAIL_SERVICE_API_KEY=""
+EMAIL_SERVICE_API_KEY=
 
 # token
-ACCESS_TOKEN_SECRET="access-token-secret"
-REFRESH_TOKEN_SECRET="refresh-token-secret"
+ACCESS_TOKEN_SECRET=
+REFRESH_TOKEN_SECRET=
 
 # migration
-MIGRATE_MONGO_URI=""
-MIGRATE_AUTOSYNC="true"
+MIGRATE_MONGO_URI=
+MIGRATE_AUTOSYNC=
